Name:                repa-examples
Version:             1.2.0.0
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures
Homepage:            http://trac.haskell.org/repa
Bug-reports:         http://trac.haskell.org/repa/newticket
Description:
        Examples using the Repa array library.

Synopsis:
        Examples using the Repa array library.


Executable repa-mmult
  Build-depends: 
        base                 == 4.*,
        repa                 == 1.2.*,
        repa-io              == 1.2.*,
        repa-algorithms      == 1.2.*,
        random               == 1.0.*

  Main-is: examples/MMult/src-repa/Main.hs
  hs-source-dirs: examples/MMult/src-repa .
  ghc-options: 
        -threaded
        -rtsopts 
        -Odph
        -fsimplifier-phases=4 
        -fstrictness-before=3 
        -funfolding-use-threshold30
        -funbox-strict-fields
        -fcpr-off
        -fllvm
        -fnew-codegen


Executable repa-laplace
  Build-depends: 
        base                 == 4.*,
        repa                 == 1.2.*,
        repa-io              == 1.2.*

  Main-is: examples/Laplace/src-repa/Main.hs
  other-modules: SolverGet SolverStencil
  hs-source-dirs: examples/Laplace/src-repa .
  ghc-options: 
        -threaded
        -rtsopts 
        -Odph
        -fsimplifier-phases=4 
        -fstrictness-before=3 
        -funfolding-use-threshold30
        -funbox-strict-fields
        -fcpr-off
        -fllvm
        -fnew-codegen


Executable repa-fft2d
  Build-depends: 
        base                 == 4.*,
        repa                 == 1.2.*,
        repa-algorithms      == 1.2.*,
        repa-io              == 1.2.*
  Main-is: examples/FFT/FFT2d/src-repa/Main.hs
  hs-source-dirs: examples/FFT/FFT2d/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph
        -fsimplifier-phases=4 
        -fstrictness-before=3 
        -funfolding-use-threshold30
        -funbox-strict-fields
        -fcpr-off
        -fllvm
        -fnew-codegen


Executable repa-fft2d-highpass
  Build-depends: 
        base                 == 4.*,
        repa                 == 1.2.*,
        repa-algorithms      == 1.2.*,
        repa-io              == 1.2.*

  Main-is: examples/FFT/HighPass2d/src-repa/Main.hs
  hs-source-dirs: examples/FFT/Highpass2d/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph
        -fsimplifier-phases=4 
        -fstrictness-before=3 
        -funfolding-use-threshold30
        -funbox-strict-fields
        -fcpr-off
        -fllvm
        -fnew-codegen


Executable repa-fft3d-highpass
  Build-depends: 
        base                 == 4.*,
        repa                 == 1.2.*,
        repa-algorithms      == 1.2.*

  Main-is: examples/FFT/HighPass3d/src-repa/Main.hs
  hs-source-dirs: examples/FFT/Highpass3d/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph
        -fsimplifier-phases=4 
        -fstrictness-before=3 
        -funfolding-use-threshold30
        -funbox-strict-fields
        -fcpr-off
        -fllvm
        -fnew-codegen


Executable repa-blur
  Build-depends: 
        base                 == 4.*,
        repa                 == 1.2.*,
        repa-algorithms      == 1.2.*,
        vector               == 0.7.*

  Main-is: examples/Blur/src-repa/Main.hs
  hs-source-dirs: examples/Blur/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph
        -fsimplifier-phases=4 
        -fstrictness-before=3 
        -funfolding-use-threshold30
        -funbox-strict-fields
        -fcpr-off
        -fllvm
        -fnew-codegen


Executable repa-edgedetect
  Build-depends: 
        base                 == 4.*,
        repa                 == 1.2.*,
        repa-algorithms      == 1.2.*,
        template-haskell     >= 2.5 && < 2.6

  Main-is: examples/EdgeDetect/src-repa/Main.hs
  hs-source-dirs: examples/EdgeDetect/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph
        -fsimplifier-phases=4 
        -fstrictness-before=3 
        -funfolding-use-threshold30
        -funbox-strict-fields
        -fcpr-off
        -fllvm
        -fnew-codegen


Executable repa-sobel
  Build-depends: 
        base                 == 4.*,
        repa                 == 1.2.*,
        repa-algorithms      == 1.2.*,
        template-haskell     >= 2.5 && < 2.6

  Main-is: examples/Sobel/src-repa/Main.hs
  hs-source-dirs: examples/Sobel/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph
        -fsimplifier-phases=4 
        -fstrictness-before=3 
        -funfolding-use-threshold30
        -funbox-strict-fields
        -fcpr-off
        -fllvm
        -fnew-codegen


