Name:                repa-examples
Version:             2.1.0.2
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures
Homepage:            http://repa.ouroborus.net
Bug-reports:         repa@ouroborus.net
Description:
        Examples using the Repa array library.

Synopsis:
        Examples using the Repa array library.


Executable repa-mmult
  Build-depends: 
        base                 == 4.*,
        repa                 == 2.1.*,
        repa-io              == 2.1.*,
        repa-algorithms      == 2.1.*,
        random               == 1.0.*

  Main-is: examples/MMult/src-repa/Main.hs
  hs-source-dirs: examples/MMult/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph -fllvm -optlo-O3
        -fno-liberate-case
        -funfolding-use-threshold30


Executable repa-laplace
  Build-depends: 
        base                 == 4.*,
        repa                 == 2.1.*,
        repa-io              == 2.1.*

  Main-is: examples/Laplace/src-repa/Main.hs
  other-modules: SolverGet SolverStencil
  hs-source-dirs: examples/Laplace/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph -fllvm -optlo-O3
        -fno-liberate-case
        -funfolding-use-threshold30


Executable repa-fft2d
  Build-depends: 
        base                 == 4.*,
        repa                 == 2.1.*,
        repa-algorithms      == 2.1.*,
        repa-io              == 2.1.*

  Main-is: examples/FFT/FFT2d/src-repa/Main.hs
  hs-source-dirs: examples/FFT/FFT2d/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph -fllvm -optlo-O3
        -fno-liberate-case
        -funfolding-use-threshold30


Executable repa-fft2d-highpass
  Build-depends: 
        base                 == 4.*,
        repa                 == 2.1.*,
        repa-algorithms      == 2.1.*,
        repa-io              == 2.1.*

  Main-is: examples/FFT/HighPass2d/src-repa/Main.hs
  hs-source-dirs: examples/FFT/HighPass2d/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph -fllvm -optlo-O3
        -fno-liberate-case
        -funfolding-use-threshold30


Executable repa-fft3d-highpass
  Build-depends: 
        base                 == 4.*,
        repa                 == 2.1.*,
        repa-algorithms      == 2.1.*

  Main-is: examples/FFT/HighPass3d/src-repa/Main.hs
  hs-source-dirs: examples/FFT/HighPass3d/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph -fllvm -optlo-O3
        -fno-liberate-case
        -funfolding-use-threshold30


Executable repa-blur
  Build-depends: 
        base                 == 4.*,
        repa                 == 2.1.*,
        repa-algorithms      == 2.1.*,
        vector               == 0.7.*

  Main-is: examples/Blur/src-repa/Main.hs
  hs-source-dirs: examples/Blur/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph -fllvm -optlo-O3
        -fno-liberate-case
        -funfolding-use-threshold30


Executable repa-sobel
  Build-depends: 
        base                 == 4.*,
        repa                 == 2.1.*,
        repa-algorithms      == 2.1.*,
        template-haskell     >= 2.5 && < 2.7

  Main-is: examples/Sobel/src-repa/Main.hs
  other-modules: Solver
  hs-source-dirs: examples/Sobel/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph -fllvm -optlo-O3
        -fno-liberate-case
        -funfolding-use-threshold30


Executable repa-canny
  Build-depends: 
        base                 == 4.*,
        repa                 == 2.1.*,
        repa-algorithms      == 2.1.*,
        template-haskell     >= 2.5 && < 2.7

  Main-is: examples/Canny/src-repa/Main.hs
  hs-source-dirs: examples/Canny/src-repa .
  ghc-options: 
        -threaded 
        -rtsopts 
        -Odph -fllvm -optlo-O3
        -fno-liberate-case
        -funfolding-use-threshold100
        -funfolding-keeness-factor100

