Name:                repa-examples
Version:             3.4.1.2
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures
Homepage:            http://repa.ouroborus.net
Bug-reports:         http://groups.google.com/d/forum/haskell-repa
Description:
        Examples using the Repa array library.

Synopsis:
        Examples using the Repa array library.

Flag llvm
  Description:  Compile via LLVM. This produces much better object code,
                but you need to have the LLVM compiler installed.

  Default:      False


Executable repa-canny
  Build-depends:
        base                 >= 4.8 && < 4.13
      , repa                 == 3.4.1.*
      , repa-algorithms      == 3.4.1.*

  Main-is: examples/Canny/src-repa/Main.hs
  hs-source-dirs: examples/Canny/src-repa .
  ghc-options:
        -rtsopts
        -threaded
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


Executable repa-mmult
  Build-depends:
        base                 >= 4.8 && < 4.13
      , random               == 1.1.*
      , repa                 == 3.4.1.*
      , repa-algorithms      == 3.4.1.*
      , repa-io              == 3.4.1.*

  Main-is: examples/MMult/src-repa/Main.hs
  other-modules: Solver
  hs-source-dirs: examples/MMult/src-repa .
  ghc-options:
        -rtsopts
        -threaded
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold100
        -funfolding-keeness-factor100
 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


Executable repa-laplace
  Build-depends:
        base                 >= 4.8 && < 4.13
      , repa                 == 3.4.1.*
      , repa-io              == 3.4.1.*
      , template-haskell

  Main-is: examples/Laplace/src-repa/Main.hs
  other-modules: SolverGet SolverStencil
  hs-source-dirs: examples/Laplace/src-repa .
  ghc-options:
        -rtsopts
        -threaded
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


Executable repa-fft2d
  Build-depends:
        base                 >= 4.8 && < 4.13
      , repa                 == 3.4.1.*
      , repa-algorithms      == 3.4.1.*
      , repa-io              == 3.4.1.*

  Main-is: examples/FFT/FFT2d/src-repa/Main.hs
  hs-source-dirs: examples/FFT/FFT2d/src-repa .
  ghc-options:
        -rtsopts
        -threaded
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold100
        -funfolding-keeness-factor100
 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


Executable repa-fft2d-highpass
  Build-depends:
        base                 >= 4.8 && < 4.13
      , repa                 == 3.4.1.*
      , repa-algorithms      == 3.4.1.*
      , repa-io              == 3.4.1.*

  Main-is: examples/FFT/HighPass2d/src-repa/Main.hs
  hs-source-dirs: examples/FFT/HighPass2d/src-repa .
  ghc-options:
        -rtsopts
        -threaded
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold100
        -funfolding-keeness-factor100
 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


Executable repa-fft3d-highpass
  Build-depends:
        base                 >= 4.8 && < 4.13
      , repa                 == 3.4.1.*
      , repa-algorithms      == 3.4.1.*

  Main-is: examples/FFT/HighPass3d/src-repa/Main.hs
  hs-source-dirs: examples/FFT/HighPass3d/src-repa .
  ghc-options:
        -rtsopts
        -threaded
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold100
        -funfolding-keeness-factor100
 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


Executable repa-blur
  Build-depends:
        base                 >= 4.8 && < 4.13
      , repa                 == 3.4.1.*
      , repa-algorithms      == 3.4.1.*
      , vector               >= 0.11 && < 0.13

  Main-is: examples/Blur/src-repa/Main.hs
  hs-source-dirs: examples/Blur/src-repa .
  ghc-options:
        -rtsopts
        -threaded
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold100
        -funfolding-keeness-factor100
 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


Executable repa-sobel
  Build-depends:
        base                 >= 4.8 && < 4.13
      , repa                 == 3.4.1.*
      , repa-algorithms      == 3.4.1.*

  Main-is: examples/Sobel/src-repa/Main.hs
  other-modules: Solver
  hs-source-dirs: examples/Sobel/src-repa .
  ghc-options:
        -rtsopts
        -threaded
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold100
        -funfolding-keeness-factor100
 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


Executable repa-volume
  Build-depends:
        base                 >= 4.8 && < 4.13
      , repa                 == 3.4.1.*
      , repa-io              == 3.4.1.*

  Main-is: examples/Volume/Main.hs
  ghc-options:
        -rtsopts
        -threaded
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold100
        -funfolding-keeness-factor100
 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3


Executable repa-unit-test
  Build-depends:
        base                 >= 4.8 && < 4.13
      , repa                 == 3.4.1.*
      , QuickCheck           >= 2.8 && < 2.12

  Main-is: examples/UnitTesting/UnitTesting.hs
  hs-source-dirs: examples/UnitTesting .
  ghc-options:
        -rtsopts
        -threaded
        -eventlog
        -O2
        -fmax-simplifier-iterations=20
        -fsimplifier-phases=3
        -fno-liberate-case
        -funfolding-use-threshold100
        -funfolding-keeness-factor100
 if flag(llvm)
  ghc-options:
        -fllvm -optlo-O3

-- vim: nospell
