Name:           repa-flow
Version:        4.0.0.0
License:        BSD3
License-file:   LICENSE
Author:         The DPH Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Data-parallel data flows.
Synopsis:       Data-parallel data flows.

Library
  build-Depends: 
        base                    == 4.7.*,
        directory               == 1.2.*,
        filepath                == 1.3.*,
        vector                  == 0.10.*,
        bytestring              == 0.10.*,
        primitive               == 0.5.4.*,
        containers              == 0.5.*,
        text                    == 1.2.*,
        repa-stream             == 4.0.0.0,
        repa-eval               == 4.0.0.0,
        repa-array              == 4.0.0.0

  exposed-modules:
        Data.Repa.Flow.Chunked
        Data.Repa.Flow.Chunked.IO

        Data.Repa.Flow.Default
        Data.Repa.Flow.Default.Debug
        Data.Repa.Flow.Default.IO
        Data.Repa.Flow.Default.SizedIO

        Data.Repa.Flow.Generic
        Data.Repa.Flow.Generic.IO

        Data.Repa.Flow.IO.Bucket

        Data.Repa.Flow.Simple

        Data.Repa.Flow.States

        Data.Repa.Flow

  other-modules:
        Data.Repa.Flow.Chunked.Base
        Data.Repa.Flow.Chunked.Map
        Data.Repa.Flow.Chunked.Folds
        Data.Repa.Flow.Chunked.Groups
        Data.Repa.Flow.Chunked.Operator

        Data.Repa.Flow.Default.IO.TSV
        Data.Repa.Flow.Default.IO.CSV

        Data.Repa.Flow.Generic.Base
        Data.Repa.Flow.Generic.Connect
        Data.Repa.Flow.Generic.List
        Data.Repa.Flow.Generic.Map
        Data.Repa.Flow.Generic.Operator
        Data.Repa.Flow.Generic.Vector
        Data.Repa.Flow.Generic.Shuffle
        Data.Repa.Flow.Generic.Eval

        Data.Repa.Flow.Simple.Base
        Data.Repa.Flow.Simple.List
        Data.Repa.Flow.Simple.Operator
        Data.Repa.Flow.Simple.IO

  include-dirs:
        include

  install-includes:
        repa-flow.h

  ghc-options:
        -threaded
        -Wall 
        -O2
        -fcpr-off
        -funbox-strict-fields
        -fno-warn-missing-signatures

  extensions:
        CPP
        BangPatterns
        NoMonomorphismRestriction
        RankNTypes
        MagicHash
        FlexibleContexts
        FlexibleInstances
        PatternGuards
        TypeFamilies
        MultiParamTypeClasses
        ScopedTypeVariables
        FunctionalDependencies
        ConstraintKinds
        ForeignFunctionInterface
        StandaloneDeriving
        ParallelListComp

        

