Name:           repa-flow
Version:        4.2.2.1
License:        BSD3
License-file:   LICENSE
Author:         The Repa Development Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Data-parallel data flows.
Synopsis:       Data-parallel data flows.

Library
  build-Depends: 
        base                    == 4.8.*,
        directory               == 1.2.*,
        filepath                == 1.4.*,
        vector                  == 0.10.*,
        bytestring              == 0.10.*,
        primitive               == 0.6.*,
        containers              == 0.5.*,
        hashtables              == 1.2.1.*,
        text                    == 1.2.*,
        repa-eval               == 4.0.0.*,
        repa-stream             == 4.2.2.*,
        repa-scalar             == 4.2.2.*,
        repa-convert            == 4.2.2.*,
        repa-array              == 4.2.2.*

  exposed-modules:
        Data.Repa.Flow.Auto
        Data.Repa.Flow.Auto.Debug
        Data.Repa.Flow.Auto.IO
        Data.Repa.Flow.Auto.Format        
        Data.Repa.Flow.Auto.SizedIO
        Data.Repa.Flow.Auto.ZipWith

        Data.Repa.Flow.Chunked
        Data.Repa.Flow.Chunked.IO

        Data.Repa.Flow.Generic
        Data.Repa.Flow.Generic.Debug
        Data.Repa.Flow.Generic.IO

        Data.Repa.Flow.IO.Bucket

        Data.Repa.Flow.Simple

        Data.Repa.Flow.States

        Data.Repa.Flow

  other-modules:
        Data.Repa.Flow.Auto.Base
        Data.Repa.Flow.Auto.Select

        Data.Repa.Flow.Chunked.Base
        Data.Repa.Flow.Chunked.Map
        Data.Repa.Flow.Chunked.Fold
        Data.Repa.Flow.Chunked.Folds
        Data.Repa.Flow.Chunked.Groups
        Data.Repa.Flow.Chunked.Generic
        Data.Repa.Flow.Chunked.Process
        Data.Repa.Flow.Chunked.Replicate

        Data.Repa.Flow.Generic.Base
        Data.Repa.Flow.Generic.Connect
        Data.Repa.Flow.Generic.List
        Data.Repa.Flow.Generic.Map
        Data.Repa.Flow.Generic.Operator
        Data.Repa.Flow.Generic.Process
        Data.Repa.Flow.Generic.Eval
        Data.Repa.Flow.Generic.Array.Distribute
        Data.Repa.Flow.Generic.Array.Shuffle
        Data.Repa.Flow.Generic.Array.Chunk
        Data.Repa.Flow.Generic.Array.Unchunk
        Data.Repa.Flow.Generic.IO.Base
        Data.Repa.Flow.Generic.IO.Sieve
        Data.Repa.Flow.Generic.IO.XSV
        Data.Repa.Flow.Generic.IO.Lines

        Data.Repa.Flow.Simple.Base
        Data.Repa.Flow.Simple.List
        Data.Repa.Flow.Simple.Operator
        Data.Repa.Flow.Simple.IO

  include-dirs:
        include

  install-includes:
        repa-flow.h

  ghc-options:
        -threaded
        -Wall -fno-warn-missing-signatures
        -O2
        -fcpr-off

  extensions:
        CPP
        MagicHash
        RankNTypes
        TypeFamilies
        BangPatterns
        PatternGuards
        ConstraintKinds
        ParallelListComp
        FlexibleContexts
        FlexibleInstances
        StandaloneDeriving
        ScopedTypeVariables
        MultiParamTypeClasses
        FunctionalDependencies
        ForeignFunctionInterface
        NoMonomorphismRestriction

