Name:                repa-io
Version:             3.2.3.1
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures
Homepage:            http://repa.ouroborus.net
Bug-reports:         repa@ouroborus.net
Description:
        Read and write Repa arrays in various formats.

Synopsis:
        Read and write Repa arrays in various formats.

Library
  Build-Depends: 
        base                 == 4.6.*,
        old-time             == 1.1.*,
        repa                 == 3.2.*,
        vector               == 0.10.*,
        bytestring           == 0.10.*,
        binary               == 0.5.*,
        bmp                  >= 1.2.3.2 && < 1.2.4

  ghc-options:
        -O2 -Wall -fno-warn-missing-signatures

  Exposed-modules:
        Data.Array.Repa.IO.Binary
        Data.Array.Repa.IO.BMP
        Data.Array.Repa.IO.Matrix
        Data.Array.Repa.IO.Timing
        Data.Array.Repa.IO.Vector
      
  Other-modules:
        Data.Array.Repa.IO.Internals.Text
