Name:                repa-io
Version:             3.4.2.0
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.10
Stability:           experimental
Category:            Data Structures
Homepage:            http://repa.ouroborus.net
Bug-reports:         http://groups.google.com/d/forum/haskell-repa
Description:
        Read and write Repa arrays in various formats.

Synopsis:
        Read and write Repa arrays in various formats.

Library
  Build-Depends:
        base                 >= 4.8 && < 4.21
      , binary               >= 0.7 && < 0.9
      , bmp                  >= 1.2 && <1.3
      , bytestring           >= 0.10 && < 0.13
      , old-time             == 1.1.*
      , repa                 >= 3.4 && <3.5
      , vector               >= 0.11 && < 0.14

  ghc-options:
        -O2
        -Wall
        -fno-warn-missing-signatures

  default-language:
        Haskell2010

  Exposed-modules:
        Data.Array.Repa.IO.Binary
        Data.Array.Repa.IO.BMP
        Data.Array.Repa.IO.Matrix
        Data.Array.Repa.IO.Timing
        Data.Array.Repa.IO.Vector

  Other-modules:
        Data.Array.Repa.IO.Internals.Text

-- vim: nospell
