Name:           repa-plugin
Version:        1.0.0.0
License:        BSD3
License-File:   LICENSE
Synopsis:       Repa vectorisation plugin
Cabal-Version:  >= 1.10
Build-Type:     Simple
Author:         The DPH Team

Library
  Exposed-Modules:
        Data.Array.Repa.Plugin

  Other-Modules:
        Data.Array.Repa.Plugin.FatName
        Data.Array.Repa.Plugin.Primitives
        Data.Array.Repa.Plugin.GHC.Pretty

        Data.Array.Repa.Plugin.ToDDC.Convert.Base
        Data.Array.Repa.Plugin.ToDDC.Convert.Type
        Data.Array.Repa.Plugin.ToDDC.Convert.Var
        Data.Array.Repa.Plugin.ToDDC.Convert
        Data.Array.Repa.Plugin.ToDDC.Detect.Base
        Data.Array.Repa.Plugin.ToDDC.Detect.Type
        Data.Array.Repa.Plugin.ToDDC.Detect
        Data.Array.Repa.Plugin.ToDDC

        Data.Array.Repa.Plugin.ToGHC.Prim
        Data.Array.Repa.Plugin.ToGHC.Wrap
        Data.Array.Repa.Plugin.ToGHC.Type
        Data.Array.Repa.Plugin.ToGHC.Var
        Data.Array.Repa.Plugin.ToGHC

        Data.Array.Repa.Plugin.Pass.Dump
        Data.Array.Repa.Plugin.Pass.Lower

        Data.Array.Repa.Plugin.Pipeline

  Build-Depends:
        base            == 4.6.*,
        containers      == 0.5.*,
        mtl             == 2.1.*,
        ghc             >= 7.5,
        ddc-base        == 0.3.*,
        ddc-core        == 0.3.*,
        ddc-core-flow   == 0.3.*,
        ddc-core-simpl  == 0.3.*


  Default-Language:
        Haskell2010

  Default-Extensions:
        TypeSynonymInstances
        KindSignatures
        BangPatterns
        FlexibleInstances

  GHC-options:
        -Wall
        -fno-warn-orphans
        -fno-warn-missing-signatures
        -fno-warn-unused-do-bind

