Name:           repa-query
Version:        4.2.0.0
License:        BSD3
License-file:   LICENSE
Author:         The Repa Development Team
Maintainer:     Ben Lippmeier <benl@ouroborus.net>
Build-Type:     Simple
Cabal-Version:  >=1.6
Stability:      experimental
Category:       Data Structures
Homepage:       http://repa.ouroborus.net
Bug-reports:    repa@ouroborus.net
Description:    Data-parallel data flows.
Synopsis:       Data-parallel data flows.

Library
  build-Depends: 
        base                 == 4.8.*,
        mtl                  == 2.2.1,
        text                 == 1.2.*,

        aeson                == 0.8.*,
        aeson-pretty         >= 0.7.2  && < 0.8,

        directory            >= 1.2.2  && < 1.3,
        bytestring           >= 0.10.6 && < 0.11, 
        unordered-containers >= 0.2.5  && < 0.3,
        containers           >= 0.5.6  && < 0.6,
        template-haskell     >= 2.10.0 && < 2.11,
        buildbox             >= 2.1.6  && < 2.2,
        filepath             >= 1.4.0  && < 1.5,
        process              >= 1.2.3  && < 1.3,
        repa-scalar          >= 4.2.0  && < 4.3,
        repa-array           >= 4.2.0  && < 4.3,
        repa-flow            >= 4.2.0  && < 4.3,
        repa-convert         >= 4.2.0  && < 4.3,
        repa-store           >= 4.2.0  && < 4.3


  exposed-modules:

        Data.Repa.Query.Build

        Data.Repa.Query.Graph.Eval
        Data.Repa.Query.Graph.JSON
        Data.Repa.Query.Graph.Compounds
        Data.Repa.Query.Graph

        Data.Repa.Query.Job
        Data.Repa.Query.Job.JSON

        Data.Repa.Query.Runtime.Primitive
        Data.Repa.Query.Runtime.Driver
        Data.Repa.Query.Runtime

        Data.Repa.Query.Source.Builder
        Data.Repa.Query.Source.External
        Data.Repa.Query.Source.Interact
        Data.Repa.Query.Source

        Data.Repa.Query.Transform.Namify

        Data.Repa.Query

  other-modules:
        Data.Repa.Query.Build.Repa.Exp
        Data.Repa.Query.Build.Repa.Graph
        Data.Repa.Query.Build.Repa.Job
        Data.Repa.Query.Build.Repa

        Data.Repa.Query.Graph.Eval.Env
        Data.Repa.Query.Graph.Eval.Exp
        Data.Repa.Query.Graph.Graph
        Data.Repa.Query.Graph.Exp

        Data.Repa.Query.Job.Spec
        Data.Repa.Query.Job.Exec

        Data.Repa.Query.Source.Primitive.Literal
        Data.Repa.Query.Source.Primitive.Operator
        Data.Repa.Query.Source.Primitive.Projection
        Data.Repa.Query.Source.Primitive.Scalar
        Data.Repa.Query.Source.Primitive.Sources

  ghc-options:
        -threaded
        -Wall -fno-warn-missing-signatures
        -O2 -Werror
        -fsimpl-tick-factor=2000

  include-dirs:
        include

  install-includes:
        repa-query.h

  extensions:
        CPP
        GADTs
        DataKinds
        BangPatterns
        TypeFamilies
        PatternGuards
        TypeOperators
        PatternSynonyms
        ParallelListComp
        FlexibleContexts
        FlexibleInstances
        OverloadedStrings
        StandaloneDeriving
        ScopedTypeVariables
        MultiParamTypeClasses
        ExistentialQuantification
        NoMonomorphismRestriction
        
