Name:                repa-repr
Version:             3.0.0.0
License:             BSD3
License-file:        LICENSE
Author:              The DPH Team
Maintainer:          Ben Lippmeier <benl@ouroborus.net>
Build-Type:          Simple
Cabal-Version:       >=1.6
Stability:           experimental
Category:            Data Structures
Homepage:            http://repa.ouroborus.net
Bug-reports:         repa@ouroborus.net
Description:
        Repa provides high performance, regular, multi-dimensional, shape polymorphic
        parallel arrays. All numeric data is stored unboxed. Functions written with
        the Repa combinators are automatically parallel provided you supply
        +RTS -Nwhatever on the command line when running the program.

Synopsis:
        High performance, regular, shape polymorphic parallel arrays.

Tested-with: GHC == 7.0.1

Library
  Build-Depends: 
        base                 == 4.4.*,
        ghc-prim             == 0.2.*,
        vector               == 0.9.*,
        QuickCheck           >= 2.3 && < 2.5,
        template-haskell     >= 2.5 && < 2.7

  ghc-options:
        -Wall -fno-warn-missing-signatures
        -Odph
        -funbox-strict-fields
        -fcpr-off

  extensions:
        EmptyDataDecls
        TypeFamilies
        MultiParamTypeClasses
        FlexibleInstances
        FlexibleContexts
        StandaloneDeriving

  Exposed-modules:
        Data.Array.Repa
        Data.Array.Repa.Index
        Data.Array.Repa.Shape
        Data.Array.Repa.Slice
        Data.Array.Repa.Eval

  Other-modules:
        Data.Array.Repa.Base
        Data.Array.Repa.Operators.Mapping
        Data.Array.Repa.Repr.Delayed
        Data.Array.Repa.Repr.List
        Data.Array.Repa.Repr.Unboxed
        Data.Array.Repa.Eval.Elt
        Data.Array.Repa.Eval.Chunked
        
